--- a/styles.css
+++ b/styles.css
@@ -14,13 +14,14 @@ body {
 
 hr {
   border-color: hsl(215, 32%, 27%);
+  margin: 20px 0;
 }
 
 main.card {
   background-color: hsl(216, 50%, 16%);
   border-radius: 20px;
 
-  max-width: 300px;
+  max-width: 325px;
   margin: auto;
   margin-top: 16vh;
 
@@ -41,9 +42,47 @@ main.card {
   margin: 20px 0;
 }
 
+.stats {
+  display: flex;
+  align-items: center;
+
+  margin: 25px 0;
+}
+
+.price {
+  display: flex;
+  align-items: center;
+  color: hsl(178, 100%, 50%);
+  font-weight: 600;
+}
+
+.time {
+  display: flex;
+  align-items: center;
+  align-self: flex-end;
+}
+
+.author {
+  display: flex;
+  align-items: center;
+}
+
 .author img {
   border-radius: 180px;
   border: 1px solid white;
 
   width: 30px;
+}
+
+.author span {
+  margin-left: 15px;
+}
+
+.author span em {
+  font-style: normal;
+  color: white;
+}
+
+.attribution {
+  margin-top: 15px;
 }
