more flexbox adjustments

--- a/styles.css
+++ b/styles.css
@@ -45,6 +45,7 @@ main.card {
 .stats {
   display: flex;
   align-items: center;
+  justify-content: space-between;
 
   margin: 25px 0;
 }
@@ -59,7 +60,6 @@ main.card {
 .time {
   display: flex;
   align-items: center;
-  align-self: flex-end;
 }
 
 .author {
