--- a/styles.css
+++ b/styles.css
@@ -19,6 +19,7 @@ hr {
 }
 
 main.card {
+  position: relative;
   background-color: hsl(216, 50%, 16%);
   border-radius: 20px;
 
@@ -37,29 +38,35 @@ main.card {
   border-radius: 10px;
 }
 
+.image {
+  position: relative;
+}
+
 .overlay {
   position: absolute;
-  background: rgba(0, 255, 247, 0);
-  opacity: 0;
-  width: 325px;
+  background-color: rgba(0, 255, 247, 0);
   border-radius: 10px;
+  opacity: 0;
+  width: 100%;
+  height: 100%;
+  top: 0;
 
-  top: 53.25%;
-  left: 50%;
-  transform: translate(-50%, -50%);
-  text-align: center;
-
-  transition: 0.2s linear;
+  transition: 0.2s ease;
 }
+
 .overlay img {
-  padding: 137px;
-  width: 50px;
+  background: transparent;
+  width: 15%;
+  height: 15%;
+
+  top: 42.5%;
+  color: white;
 }
 
 .overlay img:hover,
 .overlay:hover {
-  background: rgba(0, 255, 247, 0.5);
   opacity: 1;
+  background-color: rgba(0, 255, 247, 0.5);
 }
 
 .header h1 {
